--- a/nx.json
+++ b/nx.json
@@ -35,6 +35,15 @@
     },
     "api-interfaces": {
       "tags": []
+    },
+    "planets": {
+      "tags": []
+    },
+    "people": {
+      "tags": []
+    },
+    "reducers": {
+      "tags": []
     }
   }
 }
