--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "ng": "nx",
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2015 browser module main --first-only --create-ivy-entry-points",
     "nx": "nx",
-    "start": "ng serve",
+    "start": "nx run api:serve & ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
@@ -40,6 +40,11 @@
     "@nestjs/common": "^7.0.0",
     "@nestjs/core": "^7.0.0",
     "@nestjs/platform-express": "^7.0.0",
+    "@ngrx/effects": "^10.1.2",
+    "@ngrx/entity": "^10.1.2",
+    "@ngrx/router-store": "^10.1.2",
+    "@ngrx/store": "^10.1.2",
+    "@ngrx/store-devtools": "^10.1.2",
     "@nrwl/angular": "11.0.20",
     "reflect-metadata": "^0.1.13",
     "rxjs": "~6.5.5",
@@ -53,6 +58,8 @@
     "@angular/language-service": "^11.0.0",
     "@nestjs/schematics": "^7.0.0",
     "@nestjs/testing": "^7.0.0",
+    "@ngrx/schematics": "10.0.0",
+    "@ngrx/store-devtools": "10.0.0",
     "@nrwl/cli": "11.0.20",
     "@nrwl/cypress": "11.0.20",
     "@nrwl/jest": "11.0.20",
